# guardian

./: .bazelignore  .bazelrc  .gitignore  .gitleaks.toml  AGENTS.md  BUILD.bazel  CLAUDE.md  INVARIANTS.md  LICENSE.md  MODULE.aspect  MODULE.bazel  README.md  TRIBAL_KNOWLEDGE.md  bazel.go.work  bazel.go.work.sum  buf.gen.yaml  buf.yaml  github-apps.md  go.mod  go.sum  renovate.json5
.aspect/: config.axl  (+1 more)
src-old/hosts/: BUILD.bazel
src-old/hosts/ash-bm-001/: host.yaml
src-old/hosts/ash-bm-001/talos/patches/: ingress-firewall.yaml  registry-mirror.yaml
src-old/hosts/ash-bm-002/: host.yaml
src-old/hosts/ash-bm-003/: host.yaml
src-old/hosts/ash-bm-003/talos/: schematic.yaml
src-old/infrastructure-components/alertmanager/: BUILD.bazel
src-old/infrastructure-components/clickhouse/: BUILD.bazel
src-old/infrastructure-components/directus/: BUILD.bazel
src-old/infrastructure-components/grafana/: BUILD.bazel
src-old/infrastructure-components/openbao/: BUILD.bazel  openbao.MODULE.bazel
src-old/infrastructure-components/openbao/config/: openbao.hcl
src-old/infrastructure-components/victoria-metrics/: BUILD.bazel
src-old/viteplus-monorepo/: BUILD.bazel  package.json  pnpm-workspace.yaml
src-old/viteplus-monorepo/.changeset/: config.json
src-old/viteplus-monorepo/scripts/: check-release-hygiene.ts
src/aisucks/: BUILD.bazel  chatgpt.go  chatgpt_test.go  claude.go  go.mod  go.sum  hardening_test.go  ingest.go  ingest_test.go  live_test.go  main.go  metrics.go  metrics_test.go  queries.sql  ratelimit.go  ratelimit_test.go  sqlc.yaml  store.go  web.go  web_test.go
src/aisucks/db/: BUILD.bazel  copyfrom.go  models.go  queries.sql.go
src/aisucks/k8s/: aisucks.yaml.tmpl
src/aisucks/migrations/: 0001_init.sql
src/aisucks/templates/: result.html.tmpl
src/aisucks/testdata/: chatgpt_share.html  chatgpt_share_escaped.html  chatgpt_share_flight.html  chatgpt_soft404.html  claude_share.html
src/aisucks/web/: index.html
src/infrastructure-components/cert-manager/: BUILD.bazel
src/infrastructure-components/cert-manager/k8s/: cert-manager.yaml.tmpl
src/infrastructure-components/clickhouse/: BUILD.bazel
src/infrastructure-components/clickhouse/k8s/: clickhouse.yaml.tmpl
src/infrastructure-components/clickhouse/k8s/ddl/: 0001_otel.sql
src/infrastructure-components/external-secrets/: BUILD.bazel
src/infrastructure-components/external-secrets/k8s/: external-secrets.yaml.tmpl
src/infrastructure-components/gateway/: BUILD.bazel
src/infrastructure-components/gateway/k8s/: gateway.yaml.tmpl
src/infrastructure-components/gatus/: BUILD.bazel
src/infrastructure-components/gatus/k8s/: gatus.yaml.tmpl
src/infrastructure-components/otel-collector/: BUILD.bazel
src/infrastructure-components/otel-collector/k8s/: otel-collector.yaml.tmpl
src/infrastructure-components/postgres/: BUILD.bazel
src/infrastructure-components/postgres/k8s/: postgres.yaml.tmpl
src/infrastructure-components/vmalert/: BUILD.bazel
src/infrastructure-components/vmalert/k8s/: vmalert.yaml.tmpl
src/infrastructure-components/zot/: BUILD.bazel
src/infrastructure-components/zot/k8s/: zot-publisher-secrets.yaml.tmpl  zot.yaml.tmpl
src/infrastructure/evidence/: BUILD.bazel  capture-management-evidence.sh  database-dr.yaml  database-load.yaml  database-restore.yaml  harbor-oci-read.yaml  hardware-outage-run-all.sh  hardware-outage-run.sh  hardware-outage-run_test.sh  http-load.yaml  kustomization.yaml  management-evidence-run.sh  openbao-load.yaml  storage-smoke.yaml  verify-infrastructure-reports.sh  verify-infrastructure-reports_test.sh  verify-management-evidence-suite.sh  verify-management-evidence-suite_test.sh  verify-management-evidence.sh  verify-management-evidence_test.sh
src/infrastructure/imageset/: BUILD.bazel  imageset.go  imageset_test.go
src/infrastructure/reports/: BUILD.bazel  schema.go  schema_test.go
src/proto/: BUILD.bazel  buf.gen.yaml  buf.yaml
src/proto/testdata/buf/: analytics-events.binpb  authorization.binpb  cockpit.binpb  policy.binpb
src/status/: BUILD.bazel  document_test.go  go.sum  web.go
src/status/k8s/: status.yaml.tmpl
src/tools/: BUILD.bazel  multitool.lock.json
src/tools/boot-to-talos/: BUILD.bazel  boot-to-talos.MODULE.bazel
src/tools/cosign/: BUILD.bazel  cosign.MODULE.bazel
src/tools/curl/: curl.MODULE.bazel
src/tools/debug-clis/: BUILD.bazel  debug-clis.MODULE.bazel
src/tools/flux/: flux.MODULE.bazel
src/tools/gitleaks/: BUILD.bazel  gitleaks.MODULE.bazel
src/tools/hauler/: BUILD.bazel  go.mod  go.sum  tools.go
src/tools/hauler/patches/: gazelle-ignore-module-bazel-in-go-repos.patch  hauler-verbatim-mirror-paths.patch  helm-v4-default-capabilities-without-buildinfo.patch
src/tools/k6/: k6.MODULE.bazel
src/tools/kubectl/: BUILD.bazel  kubectl.MODULE.bazel
src/tools/latitude/: BUILD.bazel  main.go  main_test.go
src/tools/management-inventory/: BUILD.bazel  main.go  main_test.go
src/tools/oathtool/: BUILD.bazel  oathtool.MODULE.bazel  oathtool_test.sh
src/tools/openbao/: BUILD.bazel  openbao.MODULE.bazel
src/tools/oras/: oras.MODULE.bazel
src/tools/postflight-hammer/: BUILD.bazel  db.go  db_test.go  dispatch.go  dispatch_test.go  fakegithub_test.go  githubapi.go  githubapi_test.go  inputs.go  inputs_test.go  main.go  rendezvous.go  rendezvous_test.go  report.go  report_test.go  state.go  watch.go  watch_test.go
src/tools/postgres/: BUILD.bazel  postgres.MODULE.bazel
src/tools/restic/: BUILD.bazel  restic.MODULE.bazel
src/tools/ruby/: ruby.MODULE.bazel
src/tools/talm/: BUILD.bazel  talm.MODULE.bazel
src/tools/talosctl/: BUILD.bazel  talosctl.MODULE.bazel
src/viteplus-monorepo/: .gitignore  BUILD.bazel  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
src/viteplus-monorepo/.changeset/: health-connect-contract.md
src/viteplus-monorepo/scripts/: check-release-hygiene.mjs  check-release-hygiene.ts
tools/ops/: BUILD.bazel  cluster-watch  cluster_watch_test.py  multitool-repin  oathtool-repin  secret-scan  spicedb-qualify  spicedb-qualify-classifier-test
(+1881 files in other folders)
