module(
    name = "guardian",
    version = "0.0.0",
)

bazel_dep(name = "protobuf", version = "33.4")
bazel_dep(name = "rules_buf", version = "0.5.4")
bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "gazelle", version = "0.40.0")
bazel_dep(name = "rules_oci", version = "2.3.0")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "aspect_rules_js", version = "3.2.2")
bazel_dep(name = "rules_nodejs", version = "6.7.4")

include("//src/tools/kubectl:kubectl.MODULE.bazel")
include("//src/tools/boot-to-talos:boot-to-talos.MODULE.bazel")
include("//src/tools/curl:curl.MODULE.bazel")
include("//src/tools/debug-clis:debug-clis.MODULE.bazel")
include("//src/tools/k6:k6.MODULE.bazel")
include("//src/tools/openbao:openbao.MODULE.bazel")
include("//src/tools/oras:oras.MODULE.bazel")
include("//src/tools/talm:talm.MODULE.bazel")
include("//src/tools/talosctl:talosctl.MODULE.bazel")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_archive(
    name = "helm_linux_amd64",
    build_file_content = """exports_files(["helm"])""",
    sha256 = "966bed9b1e0dda11268f59bd7268c3cd3e308b37b070546e1d78a02526ff63f2",
    strip_prefix = "linux-amd64",
    url = "https://get.helm.sh/helm-v3.19.1-linux-amd64.tar.gz",
)

http_archive(
    name = "opentofu_linux_amd64",
    build_file_content = """
exports_files(["tofu"])

genrule(
    name = "tofu_bin",
    srcs = ["tofu"],
    outs = ["tofu-runner"],
    cmd = "cp $(location tofu) $@ && chmod +x $@",
    executable = True,
    visibility = ["//visibility:public"],
)
""",
    sha256 = "46b48c3438c65cf479fc076c9281422ffa2f493548d1e813d154c835c5986a08",
    url = "https://github.com/opentofu/opentofu/releases/download/v1.12.3/tofu_1.12.3_linux_amd64.zip",
)

http_file(
    name = "cacert_pem",
    downloaded_file_path = "cacert.pem",
    sha256 = "86a1f3366afac7c6f8ae9f3c779ac221129328c43f0ab2b8817eb2f362a5025c",
    url = "https://curl.se/ca/cacert.pem",
)

buf = use_extension("@rules_buf//buf:extensions.bzl", "buf")
buf.toolchains(
    sha256 = "ce4a14aeff08a01585c6ffd2a7743473ab3354275181de0ee10f792a21f7d56e",
    version = "v1.70.0",
)
use_repo(buf, "rules_buf_toolchains")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.26.4")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "in_gopkg_yaml_v3")
use_repo(
    go_deps,
    "com_github_hashicorp_hcl_v2",
    "com_github_zclconf_go_cty",
)

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version = "22.22.2")
use_repo(node, "nodejs_toolchains")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    npmrc = "//src/viteplus-monorepo:.npmrc",
    pnpm_lock = "//src/viteplus-monorepo:pnpm-lock.yaml",
)
use_repo(npm, "npm")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "ubuntu_noble_base",
    digest = "sha256:023f8a753c22258c9fe2d0005a7d28258038da7d620e9f93e9ad78aa266f9f11",
    image = "docker.io/library/ubuntu",
    platforms = ["linux/amd64"],
)
use_repo(oci, "ubuntu_noble_base", "ubuntu_noble_base_linux_amd64")
