module(
    name = "guardian",
    version = "0.0.0",
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "protobuf", version = "33.4")
bazel_dep(name = "rules_buf", version = "0.5.4")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "gazelle", version = "0.40.0")

# Gazelle reads a fetched Go module's own MODULE.bazel to pick the rules_go
# apparent name, breaking generated BUILD files for modules that ship a Bazel
# workspace (their bazel_deps are not in our module graph). See the patch
# header for details.
single_version_override(
    module_name = "gazelle",
    patch_strip = 1,
    patches = ["//src/tools/hauler/patches:gazelle-ignore-module-bazel-in-go-repos.patch"],
    # Explicit version: without it the patch would apply to whatever gazelle
    # version MVS selects, silently drifting past the release the patch was
    # reviewed against.
    version = "0.40.0",
)

bazel_dep(name = "rules_oci", version = "2.3.0")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "aspect_rules_js", version = "3.2.2")
bazel_dep(name = "rules_nodejs", version = "6.7.4")
bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "rules_shell", version = "0.8.0")
bazel_dep(name = "rules_multitool", version = "1.11.1")

# Repo-pinned host CLIs, resolved to the host os/cpu via toolchains:
# @multitool//tools/<name>. Pins (URL + sha256 per platform) live in the
# lockfile; refresh hashes after a version bump with tools/ops/multitool-repin.
multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
multitool.hub(lockfile = "//src/tools:multitool.lock.json")
use_repo(multitool, "multitool")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.12.12",
)
use_repo(python, "python_3_12_12")

include("//src/tools/oathtool:oathtool.MODULE.bazel")
include("//src/tools/postgres:postgres.MODULE.bazel")
include("//src/tools/restic:restic.MODULE.bazel")
include("//src/tools/ruby:ruby.MODULE.bazel")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

# Dated snapshot, not https://curl.se/ca/cacert.pem: the undated URL is
# mutable, so every Mozilla bundle rotation would sha256-fail the required
# build check on unrelated PRs. Refresh by bumping the date and hash together.
http_file(
    name = "cacert_pem",
    downloaded_file_path = "cacert.pem",
    sha256 = "86a1f3366afac7c6f8ae9f3c779ac221129328c43f0ab2b8817eb2f362a5025c",
    url = "https://curl.se/ca/cacert-2026-05-14.pem",
)

# BGP-derived IP->ASN ranges (public routing data), mirrored from
# iptoasn.com as a repo release because the upstream URL is mutable.
# Refresh: src/infrastructure/runbooks/ip2asn-refresh.md.
http_file(
    name = "ip2asn_combined",
    downloaded_file_path = "ip2asn-combined.tsv.gz",
    sha256 = "47a70c5bd178a72d0f27507da8f1ec94910eb5088b00a3d5e9cd0ac12c2a2811",
    url = "https://github.com/guardian-intelligence/guardian/releases/download/data-ip2asn-20260707/ip2asn-combined.tsv.gz",
)

buf = use_extension("@rules_buf//buf:extensions.bzl", "buf")
buf.toolchains(
    sha256 = "ce4a14aeff08a01585c6ffd2a7743473ab3354275181de0ee10f792a21f7d56e",
    version = "v1.70.0",
)
use_repo(buf, "rules_buf_toolchains")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.26.4")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "in_gopkg_yaml_v3")
use_repo(
    go_deps,
    "build_buf_gen_go_bufbuild_protovalidate_protocolbuffers_go",
    "build_buf_go_protovalidate",
    "com_connectrpc_connect",
    "com_connectrpc_otelconnect",
    "com_github_aws_aws_sdk_go_v2",
    "com_github_aws_aws_sdk_go_v2_config",
    "com_github_aws_aws_sdk_go_v2_credentials",
    "com_github_aws_aws_sdk_go_v2_service_s3",
    "com_github_bazelbuild_rules_go",
    "com_github_chromedp_cdproto",
    "com_github_chromedp_chromedp",
    "com_github_clickhouse_clickhouse_go_v2",
    "com_github_coreos_go_oidc_v3",
    "com_github_google_cel_go",
    "com_github_jackc_pgx_v5",
    "com_github_mileusna_useragent",
    "com_github_openbao_openbao_api_v2",
    "com_github_prometheus_client_golang",
    "com_github_stripe_stripe_go_v83",
    "com_github_tigerbeetle_tigerbeetle_go",
    "io_k8s_api",
    "io_k8s_apimachinery",
    "io_k8s_apiserver",
    "io_k8s_sigs_yaml",
    "io_opentelemetry_go_otel",
    "io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracegrpc",
    "io_opentelemetry_go_otel_sdk",
    "io_opentelemetry_go_otel_trace",
    "org_golang_google_protobuf",
    "org_golang_x_crypto",
    "org_golang_x_crypto_x509roots_fallback",
    "org_golang_x_net",
    "org_golang_x_sys",
    "org_golang_x_term",
)

# cel-go ships checked-in BUILD files written for WORKSPACE-era rules_go
# (@io_bazel_rules_go loads, go_default_library targets); regenerate them so
# the targets follow the importpath naming the rest of the graph uses.
go_deps.gazelle_override(
    build_file_generation = "on",
    path = "github.com/google/cel-go",
)

# The k8s.io staging modules ship .proto sources next to pregenerated Go
# marshalers; gazelle's proto rules for them emit cross-module proto imports
# that don't resolve, and the Go packages are complete without them.
go_deps.gazelle_override(
    directives = ["gazelle:proto disable"],
    path = "k8s.io/api",
)
go_deps.gazelle_override(
    directives = ["gazelle:proto disable"],
    path = "k8s.io/apimachinery",
)
go_deps.gazelle_override(
    directives = ["gazelle:proto disable"],
    path = "k8s.io/apiserver",
)
go_deps.gazelle_override(
    directives = ["gazelle:proto disable"],
    path = "k8s.io/client-go",
)
go_deps.gazelle_override(
    directives = ["gazelle:proto disable"],
    path = "k8s.io/component-base",
)
# The OpenTelemetry Go modules import each other's internal/ packages across
# module boundaries (e.g. the otlptracegrpc and sdk modules pull
# go.opentelemetry.io/otel/internal/global). gazelle scopes generated
# internal targets to their own repo by default, so those cross-module imports
# fail with a visibility error; publish the otel module's targets so the sibling
# OTel repos can link them.
go_deps.gazelle_override(
    directives = ["gazelle:go_visibility //visibility:public"],
    path = "go.opentelemetry.io/otel",
)

# TigerBeetle's Go client is a cgo wrapper around checked-in, platform-specific
# static libraries. Its generated Gazelle rule does not declare the header or
# archive as cgo inputs, so the sandboxed compile cannot see them. Keep the
# upstream source intact and supply an explicit Bazel package for the native
# artifacts.
go_deps.gazelle_override(
    build_file_generation = "off",
    path = "github.com/tigerbeetle/tigerbeetle-go",
)
go_deps.module_override(
    patch_strip = 1,
    patches = ["//src/services/payments/patches:tigerbeetle-go-bazel.patch"],
    path = "github.com/tigerbeetle/tigerbeetle-go",
)

# Hauler is built from source in an ISOLATED go_deps instance: its ~350-module
# dependency tree (helm, containerd, cosign) must not participate in the root
# module's version resolution, where it forces Kubernetes library bumps onto
# the production operator (observed: client-go v0.36 breaking
# controller-runtime v0.22). Nothing in the root module imports from this
# graph; the only consumer is the //src/tools/hauler binary alias.
#
# Isolation exception: gazelle's _SHARED_REPOS (github.com/golang/protobuf and
# google.golang.org/protobuf) are always taken from the ROOT instance to avoid
# duplicate-package link errors, so the protobuf pins in
# src/tools/hauler/go.sum are dead — the hauler binary links the root graph's
# protobuf version.
hauler_go_deps = use_extension(
    "@gazelle//:extensions.bzl",
    "go_deps",
    isolate = True,
)
hauler_go_deps.from_file(go_mod = "//src/tools/hauler:go.mod")

# Every Go module in hauler's tree ships committed .pb.go files; generating
# proto rules instead mis-wires targets (rekor-tiles, in-toto, ct-go) and
# links a second copy of grpc from outside the isolated instance. Use the
# pregenerated Go sources everywhere (the boring path — no remote generation,
# matching the repo's Buf/local-generator doctrine).
hauler_go_deps.gazelle_default_attributes(
    directives = ["gazelle:proto disable"],
)

# jwx ships its own Bazel workspace; regenerate its BUILD files as for a
# plain Go module (the gazelle patch above keeps generation from reading the
# shipped MODULE.bazel).
hauler_go_deps.gazelle_override(
    build_file_generation = "clean",
    path = "github.com/lestrrat-go/jwx/v3",
)

# Served mirror repo paths must stay verbatim (registry.k8s.io/pause is
# requested by containerd mirrors as /v2/pause, not /v2/library/pause); see
# the patch header.
hauler_go_deps.module_override(
    patch_strip = 1,
    patches = ["//src/tools/hauler/patches:hauler-verbatim-mirror-paths.patch"],
    path = "hauler.dev/go/hauler/v2",
)

# helm v4 panics in init() when the binary carries no Go module build info,
# which rules_go binaries never do; see the patch header.
hauler_go_deps.module_override(
    patch_strip = 1,
    patches = ["//src/tools/hauler/patches:helm-v4-default-capabilities-without-buildinfo.patch"],
    path = "helm.sh/helm/v4",
)
use_repo(hauler_go_deps, "dev_hauler_go_hauler_v2")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version = "22.22.2")
use_repo(node, "nodejs", "nodejs_toolchains")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    npmrc = "//src/products/viteplus-monorepo:.npmrc",
    pnpm_lock = "//src/products/viteplus-monorepo:pnpm-lock.yaml",
)
use_repo(npm, "npm")

# glibc/libstdc++-only base for dynamically linked service binaries; static
# Go binaries run from scratch.
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_cc_base",
    digest = "sha256:7ee09f36862efbdbf70422db263e411c2618409ca46faa555bd5b636155307df",
    image = "gcr.io/distroless/cc-debian12",
    platforms = ["linux/amd64"],
)
# A real Chromium process is the subject of the checkout canary: it executes
# Stripe-hosted Checkout and propagates browser trace context across the
# public edge. Playwright's pinned browser image carries Chromium plus the
# exact shared-library and font set it requires.
oci.pull(
    name = "playwright",
    digest = "sha256:02810c978d5396bf382ab6015c25ad6bed9e39f4a41c5b9c829e9fea439274e2",
    image = "mcr.microsoft.com/playwright",
    platforms = ["linux/amd64"],
)
use_repo(
    oci,
    "distroless_cc_base",
    "distroless_cc_base_linux_amd64",
    "playwright",
    "playwright_linux_amd64",
)
