# Host definitions and Talos patches as test data: the inline-manifest
# ordering test (//src/guardian-cli/cmd/guardian:guardian_test) renders the
# real machine config from the real talos.patches lists -- the order it pins
# is the order written in each host.yaml.
filegroup(
    name = "hosts",
    srcs = glob([
        "*/host.yaml",
        "*/talos/patches/*.yaml",
        "*/talos/schematic.yaml",
        "*.cue",
        "*.md",
    ]),
    visibility = ["//src/guardian-cli:__subpackages__"],
)
