load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_cross_binary", "go_library", "go_test")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

go_library(
    name = "aisucks_lib",
    srcs = [
        "chatgpt.go",
        "claude.go",
        "ingest.go",
        "main.go",
        "metrics.go",
        "ratelimit.go",
        "store.go",
        "web.go",
    ],
    embedsrcs = [
        "migrations/0001_init.sql",
        "templates/result.html.tmpl",
        # Prerendered landing page; regenerate via `pnpm generate` in
        # src/viteplus-monorepo/apps/aisucks-web.
        "web/index.html",
    ],
    importpath = "github.com/guardian-intelligence/guardian/src/aisucks",
    visibility = ["//visibility:private"],
    deps = [
        "//src/aisucks/db",
        "@com_github_caddyserver_certmagic//:certmagic",
        "@com_github_jackc_pgx_v5//:pgx",
        "@com_github_jackc_pgx_v5//pgxpool",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promauto",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
        "@org_golang_x_sys//unix",
    ],
)

go_binary(
    name = "aisucks",
    embed = [":aisucks_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)

go_test(
    name = "aisucks_test",
    srcs = [
        "chatgpt_test.go",
        "hardening_test.go",
        "ingest_test.go",
        "live_test.go",
        "metrics_test.go",
        "ratelimit_test.go",
        "web_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":aisucks_lib"],
    deps = [
        "@com_github_jackc_pgx_v5//pgxpool",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/testutil",
    ],
)

# The fleet is linux/amd64 only; pin the image binary's platform regardless
# of the build host. pure=on keeps it cgo-free and static.
go_cross_binary(
    name = "aisucks_linux_amd64",
    platform = "@io_bazel_rules_go//go/toolchain:linux_amd64",
    target = ":aisucks",
)

pkg_tar(
    name = "aisucks_layer",
    files = {
        ":aisucks_linux_amd64": "usr/bin/aisucks",
        # The ubuntu base has no CA store; ACME and the share-link liveness
        # fetch both need to verify public TLS. Path is where Go's crypto/x509
        # looks on Debian-family systems.
        "@cacert_pem//file": "etc/ssl/certs/ca-certificates.crt",
    },
    modes = {
        "usr/bin/aisucks": "0755",
        "etc/ssl/certs/ca-certificates.crt": "0644",
    },
)

oci_image(
    name = "image",
    base = "@ubuntu_noble_base",
    entrypoint = ["/usr/bin/aisucks"],
    exposed_ports = [
        "80/tcp",
        "443/tcp",
    ],
    tars = [":aisucks_layer"],
    visibility = ["//visibility:public"],
)

oci_load(
    name = "load",
    image = ":image",
    repo_tags = ["guardian/aisucks:dev"],
)
