load("@protobuf//bazel:proto_library.bzl", "proto_library")
load(
    "//tools/proto:defs.bzl",
    "guardian_buf_breaking_test",
    "guardian_buf_lint_test",
    "guardian_go_proto_codegen_check",
)

package(default_visibility = ["//visibility:public"])

exports_files([
    "buf.yaml",
    "testdata/buf/analytics-events.binpb",
])

# Vendored third-party (buf.build/bufbuild/protovalidate); not linted (see
# buf.yaml ignore). Importable as buf/validate/validate.proto.
proto_library(
    name = "buf_validate_proto",
    srcs = ["buf/validate/validate.proto"],
    strip_import_prefix = "/src/proto",
    deps = [
        "@protobuf//:descriptor_proto",
        "@protobuf//:duration_proto",
        "@protobuf//:field_mask_proto",
        "@protobuf//:timestamp_proto",
    ],
)

proto_library(
    name = "analytics_events_proto",
    srcs = ["guardian/analytics/v1/events.proto"],
    strip_import_prefix = "/src/proto",
    deps = [":buf_validate_proto"],
)

guardian_buf_lint_test(
    name = "analytics_events_buf_lint_test",
    module = ".",
    targets = [":analytics_events_proto"],
)

guardian_buf_breaking_test(
    name = "analytics_events_buf_breaking_test",
    against = "testdata/buf/analytics-events.binpb",
    module = ".",
    targets = [":analytics_events_proto"],
)

filegroup(
    name = "analytics_events_gen_go",
    srcs = [
        "//src/proto/gen/go/guardian/analytics/v1:sources",
        "//src/proto/gen/go/guardian/analytics/v1/analyticsv1connect:sources",
    ],
)

guardian_go_proto_codegen_check(
    name = "analytics_events_go_codegen_check",
    generated_root = "src/proto/gen/go",
    generated_sources = ":analytics_events_gen_go",
    go_module = "github.com/guardian-intelligence/guardian/src/proto/gen/go",
    proto_files = ["guardian/analytics/v1/events.proto"],
    proto_path = "src/proto",
    # events.proto imports the vendored buf/validate/validate.proto (which in
    # turn imports these WKTs); stage them so protoc resolves the import. Only
    # events.proto is generated (proto_files).
    proto_srcs = [
        "guardian/analytics/v1/events.proto",
        "buf/validate/validate.proto",
        "@protobuf//:well_known_protos",
    ],
)
